# Python_DRF_1

./: .env  .env_exemple  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg
apps/pizza/: models.py  serializers.py  urls.py  views.py
apps/pizza/migrations/: 0001_initial.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/chat/: cunsumers.py  routing.py
backend/apps/pizza/: filter.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/pizza_shops/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/user/: managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/configs/: __init__.py  asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_settings/: __init__.py  channels_conf.py  email_conf.py  jwt_config.py  rest_config.py
backend/core/: models.py  pagination.py
backend/core/enums/: action_token_enum.py  regex.py
backend/core/exceptions/: jwt_exception.py
backend/core/handlers/: error_handler.py
backend/core/middlewares/: socket_midleware.py
backend/core/services/: email_service.py  file_services.py  jwt_service.py
backend/templates/: base.html  recovery.html  register.html  spam.html  test_email.html
client/: asset-manifest.json  index.html
client/static/js/: main.c1d77664.js  main.c1d77664.js.map
configs/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
fruits/: models.py  views.py
fruits/migrations/: 0001_initial.py  0002_remove_newfruitmodel_taste_newfruitmodel_status.py
(+11 files in other folders)
